# chop-db

./: .gitignore  Cargo.toml  README.md  build.rs
client/: go.mod  go.sum  main.go
client/pb/: commander.pb.go  commander_grpc.pb.go  forester.pb.go  forester_grpc.pb.go  lumberjack.pb.go  lumberjack_grpc.pb.go
client/prompts/: main.go
db/: Cargo.toml
db/logs/: BxDDmR8Tf9Oit2G.logchop
db/src/: hash_index.rs  lib.rs  segment.rs
exercises/transactions/: Cargo.toml  sample_input.txt
exercises/transactions/src/: db.rs  lib.rs
proto/: commander.proto  forester.proto  lumberjack.proto
scripts/: build_go_protos.sh
server/: Cargo.toml  build.rs
server/src/: main.rs
src/: main.rs  rand.rs
