[package]
name = "chop-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tonic = "0.10.2"
prost = "0.12.1"
chop-db = { path = "../db" }

[build-dependencies]
tonic-build = "0.10"
